--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -6,10 +6,11 @@
     background: rgba(0, 0, 0, 0.8);
     padding: 1rem;
     text-align: center;
-    box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
+    box-shadow: 0 0 1rem rgba(255, 255, 255, 0.3);
     z-index: 1000;
     display: flex;
     justify-content: space-between;
+    align-items: center;
   }
   
   .logo {
@@ -43,4 +44,13 @@
   .logoutButton:hover {
     box-shadow: 0 0 20px #ff5733;
     transform: scale(1.05);
+  }
+
+  @media (max-width: 600px) {
+    .logo{font-size: 1rem;}
+
+    .logoutButton{
+      padding: 1rem;
+    }
+
   }
