--- a/frontend/src/pages/Login/Login.module.css
+++ b/frontend/src/pages/Login/Login.module.css
@@ -6,7 +6,7 @@
     height: auto;
     background: rgba(0, 0, 0, 0.7);
     padding: 3rem;
-    border-radius: 10px;
+    border-radius: 1rem;
     box-shadow: 0 0 20px #f39c12;
     width: auto;
     margin: auto;
@@ -19,15 +19,15 @@
     text-transform: uppercase;
     text-shadow: 0 0 10px #fff, 0 0 20px #f39c12;
     color: white;
-    margin-bottom: 20px;
+    margin-bottom: 3rem;
   }
   
   .input {
-    padding: 12px;
+    padding: 1rem;
     width: 100%;
-    margin-bottom: 15px;
+    margin-bottom: 1rem;
     border: 2px solid #f39c12;
-    border-radius: 5px;
+    border-radius: 0.5rem;
     background: rgba(0, 0, 0, 0.5);
     color: #fff;
     font-size: 1rem;
@@ -35,11 +35,11 @@
   }
   
   .button {
-    padding: 12px 20px;
+    padding: 1rem 2rem;
     background: linear-gradient(45deg, #f39c12, #ff5733);
     color: white;
     border: none;
-    border-radius: 5px;
+    border-radius: 1rem;
     cursor: pointer;
     font-weight: bold;
     text-transform: uppercase;
